# banmarchive

./: .dockerignore  .gitignore  Aptfile  Dockerfile  app.yaml  build.sh  docker-compose.yml  manage.py  package.json  pyproject.toml  readme.md  requirements.txt  webpack.config.js
.bin/: build.sh  install.sh  prepare.sh  release.sh
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.do/: Dockerfile  app.yaml  static.dockerfile
.github/workflows/: deploy.yaml  deploy.yml
artifacts/static/: main.1c0973ec0481.css  main.5222cb8490f9.js  main.61395df5ffab.css  main.958f9088b573.css  main.css  main.e8c78ce8b9a9.css  main.e8e3757b97c8.css  main.fbb4d6747577.css  main.js  pdf.0d4f875fc0d8.js  pdf.1ffee86e8ff1.css  pdf.45dbda2dae23.js  pdf.8d1a115ae9eb.js  pdf.css  pdf.d12ff050bba7.js  staticfiles.json  upload.23eb881cdc9f.js  upload.5fc01afff003.js  upload.7e0d2fe1f241.js  upload.js  (+3 more)
banmarchive/: admin.py  middleware.py  models.py  urls.py  views.py  wsgi.py
helpers/: cache.py  content.py  parsing.py  rest.py  thumbnail_generator.py
home/: models.py
publications/: admin.py  models.py  rest.py  scraper.py  serializers.py  views.py  wagtail_hooks.py
scripts/: build.sh  importutil.py
search/: admin.py  models.py  views.py
website_about/: apps.py  models.py
website_awards/: apps.py  models.py  views.py
website_data_migration/: apps.py  migrate_awards.py  signals.py
website_events/: apps.py  models.py
website_generic_page/: apps.py  models.py
website_home/: apps.py  blocks.py  models.py
website_news/: apps.py  models.py  views.py
(+125 files in other folders)
